--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 
 	/* WebSocket */
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework:spring-messaging:6.1.14'
+	implementation 'io.projectreactor.netty:reactor-netty:1.1.0'
 
 	/* Redis */
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
