--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ build/
 !**/src/test/**/build/
 **/*.properties
 **/*.yml
+# Docker Compose 파일 제외
+!docker-compose.yml
+
+!gradle/wrapper/gradle-wrapper.properties
 
 
 ### STS ###
