--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,11 @@ dependencies {
 	/* Redis */
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	/* S3 */
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws'
+	implementation 'com.amazonaws:aws-java-sdk-s3'//s3
+
 }
 
 tasks.named('test') {
