chore: livekit 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws'
 	implementation 'com.amazonaws:aws-java-sdk-s3'//s3
 
+	/* livekit - openvidu */
+	implementation 'io.livekit:livekit-server:0.5.11'
 }
 
 tasks.named('test') {
